# backend-ii

./: .gitignore
challenges/: app.py  challenge_1.py  challenge_10.py  challenge_11.py  challenge_12.proto  challenge_12_client.py  challenge_12_server.py  challenge_13.py  challenge_13_original.py  challenge_14.py  challenge_15.py  challenge_16.yml  challenge_2.py  challenge_3.py  challenge_4.py  challenge_5.py  challenge_6.py  challenge_7.py  challenge_8.py  challenge_9.py  test.py  test_app.py  test_challenge_8.py
classes/session_3/: countdown_timer.py  file_reader.py  threads.py  update_progress.py  update_progress_2.py
design_patterns_api/: pyproject.toml
design_patterns_api/design_patterns_api/: api.py  payments.py
django_recap/: Dockerfile  Makefile  compose.yaml  main.py  pyproject.toml
django_recap/django_recap/: asgi.py  settings.py  urls.py  wsgi.py
exercises/: exercise_1.py  exercise_10.py  exercise_11.py  exercise_12.py  exercise_12_client.py  exercise_12_server.py  exercise_13.py  exercise_14.py  exercise_15.py  exercise_16.yml  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py  exercise_6.py  exercise_7.py  exercise_8.py  exercise_9.py  math_service.proto  test_exercise_8.py  test_math_functions.py
