[tool.poetry]
name = "design-patterns-api"
version = "0.1.0"
description = ""
authors = ["Spereira05 <vieirasantiago205@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
